# VibeCraft

./: .credo.exs  .gitignore  CHAPTER-ONE.md  CHAPTER-THREE.md  CHAPTER-TWO.md  CMakeLists.txt  CONTRIBUTING.md  GAMEPLAY.md  GDD.md  LICENSE.md  Makefile  README.md  ROADMAP.md  STATUS.md  mix.exs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml
c_src/: vibe_craft_nif.c
lib/: vibe_craft.ex
lib/vibe_craft/: ai.ex  application.ex  building.ex  day_night.ex  demo.ex  editor.ex  game.ex  hero.ex  inventory.ex  lobby.ex  matchmaking.ex  replay.ex  resources.ex  soundtrack.ex  spell.ex  terrain.ex  unit.ex
lib/vibe_craft/assets/: animation.ex  bvh_loader.ex  loader.ex  model.ex  model_loader.ex  sprite.ex  sprites.ex
lib/vibe_craft/campaign/: mission.ex
lib/vibe_craft/gfx/: nif.ex  renderer.ex  window.ex
lib/vibe_craft/map/: loader.ex  map.ex  tile.ex
lib/vibe_craft/net/: client.ex  connection_handler.ex  protocol.ex  server.ex
priv/animations/: fighter_idle.bvh
priv/maps/: skirmish.map
priv/models/: fighter.mtl
priv/sprites/: cursor.rgba
test/vibe_craft/: building_test.exs  day_night_test.exs  editor_test.exs  game_test.exs  hero_test.exs  inventory_test.exs  lobby_test.exs  matchmaking_test.exs  replay_test.exs  resources_test.exs  soundtrack_test.exs  spell_test.exs  terrain_test.exs  unit_test.exs
test/vibe_craft/assets/: animation_test.exs  bvh_loader_test.exs  loader_test.exs  model_loader_test.exs  model_test.exs  sprite_test.exs  sprites_test.exs
test/vibe_craft/campaign/: mission_test.exs
test/vibe_craft/map/: loader_test.exs  map_test.exs  tile_test.exs
test/vibe_craft/net/: protocol_test.exs  server_client_test.exs
